--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@ img{
 }
 .mainDiv{
   display: flex;
-  /*justify-content: space-between;*/
+  justify-content: space-around;
 }
 .main{
   display:flex;
